--- a/paper/Type.tex
+++ b/paper/Type.tex
@@ -1089,9 +1089,9 @@ rewriting rules used by Agda so that we do not have to think about it again.
 \AgdaSymbol{\#-\}}\<%
 \end{code}
 
-At this stage we are finally ready to define the type of closed pre-types, those
+At last we are ready to define the type of closed pre-types, those
 having no free type variables. We call \AgdaDatatype{Type} closed pre-types.
-Hereafter, we will seldom use pre-types again.
+From now on, we will seldom use pre-types again.
 
 \begin{code}%
 \>[0]\AgdaFunction{Type}\AgdaSpace{}%
