--- a/paper/main.tex
+++ b/paper/main.tex
@@ -33,7 +33,7 @@
 \newunicodechar{∪}{\ensuremath\cup}
 \newunicodechar{⊢}{\ensuremath\vdash}
 \newunicodechar{∈}{\ensuremath\in}
-\newunicodechar{×}{\ensuremath\times}
+\newunicodechar{─}{\ensuremath{-\mkern-5mu}}
 \newunicodechar{′}{\ensuremath{'}}
 \newunicodechar{≡}{\ensuremath\equiv}
 \newunicodechar{₀}{\ensuremath{_0}}
@@ -86,7 +86,7 @@
 
 \begin{document}
 
-\title{A Logical Solution of the Linearity Challenge}
+\title{A Splitting Solution of the Linearity Challenge}
 
 %%=============================================================%%
 %% GivenName	-> \fnm{Joergen W.}
