--- a/paper/Type.lagda.tex
+++ b/paper/Type.lagda.tex
@@ -200,9 +200,9 @@ rewriting rules used by Agda so that we do not have to think about it again.
 {-# REWRITE dual-subst #-}
 \end{code}
 
-At this stage we are finally ready to define the type of closed pre-types, those
+At last we are ready to define the type of closed pre-types, those
 having no free type variables. We call \AgdaDatatype{Type} closed pre-types.
-Hereafter, we will seldom use pre-types again.
+From now on, we will seldom use pre-types again.
 
 \begin{code}
 Type : Set
