--- a/paper/macros.tex
+++ b/paper/macros.tex
@@ -279,6 +279,7 @@
 \newcommand{\Splitting}[3]{#1 \simeq #2 + #3}
 \newcommand{\SimpleSplitting}[3]{#1 \ni #2 \vartriangleright #3}
 \newcommand{\sand}{\mathbin\ast}
+\newcommand{\wand}{\mathbin{-\mkern-5mu\ast}}
 
 %%%%%%%%%%%%%%%%%
 %%% FUNCTIONS %%%
